[project]
name = "rtllib"
version = "0.1.0"
description = "RTL library client SDK for GraphQL API communication"
readme = "README.md"
authors = [
    { name = "kwonah0", email = "kwondkdud@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "httpx>=0.25.0",
    "gql[httpx]>=3.4.0",
    "dynaconf>=3.2.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.7.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
